src/objects/Compliance_Meetings__c.object
<CustomObject>
    <fields>
        <fullName>Compliance_Meeting_Dates__c</fullName>
        <label>Compliance Meeting Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology</label>
        <referenceTo>Technology__c</referenceTo>
        <relationshipLabel>Change Management Meetings</relationshipLabel>
        <relationshipName>Change_Management_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_any_approval_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was any approval Issued?</label>
        <type>Checkbox</type>
    </fields>
    <label>Change Management Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Compliance Meetings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Management Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>